--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11350,7 +11350,7 @@ span.approved-agent i {
 	border: none;
 	border-radius: 0.2rem;
 	font-weight: 600;
-	background: #232c3d;
+	background: #028fe3;
 	color: #ffffff !important;
 }
 .agent-btn-contact i {
