--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5221,9 +5221,19 @@ li.login-attri .account-drop a {
 	color: #333c56 !important;
 	font-size: 35px;
 }
+
+.select-search{
+	width: 1000px; 
+	height: 70px;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	background-color: #fff;
+	margin-top: 20px;
+	border-radius:5px;
+}
 .btn.search-btn {
 	background: #00966a;
-	margin-top: 10px; /* sửa button tìm kiếm */
 	padding: 10px 15px;
 	border-radius: 5px;
 	box-shadow: 0 5px 24px rgba(31, 37, 59, 0.15);
@@ -5234,6 +5244,7 @@ li.login-attri .account-drop a {
 	align-items: center;
 	justify-content: center;
 	height: 54px;
+	width: 120px;
 }
 .btn.search-btn:hover,
 .btn.search-btn:focus {
